Add 'Next Level' button to home page
Added the hidden button

--- a/home.html
+++ b/home.html
@@ -29,6 +29,7 @@
       <h2 class="glitch" data-text="WELCOME TO THE UPSIDE DOWN">WELCOME TO THE UPSIDE DOWN</h2>
       <p class="typewriter">Something strange is happening in Hawkins, Indiana...</p>
       <button id="cta-btn" class="neon-btn">ENTER HAWKINS LAB</button>
+       <button class="hidden" onclick="window.location.href='level2.html'">Next Level</button>
     </div>
     <div class="flickering-lights"></div>
   </section>
