--- a/defect_laboratory.html
+++ b/defect_laboratory.html
@@ -23,7 +23,7 @@
       display: flex;
       justify-content: space-between;
       align-items: center;
-      border-bottom: 1px solid #333
+      border-bottom: 1px solid #333;
       position: relative; 
       top: 0;
       z-index: 100;
