ui changes in home page & characters.html

--- a/characters.html
+++ b/characters.html
@@ -27,7 +27,7 @@
     <div class="hero-overlay"></div>
     <div class="hero-content">
       <h2 class="glitch" data-text="THE PARTY">THE PARTY</h2>
-      <p>Heroes fighting against the darkness</p>
+      <p class="classified-text">CLASSIFIED SUBJECT FILES • DO NOT DISTRIBUTE</p>
     </div>
   </section>
 
