--- a/home.html
+++ b/home.html
@@ -62,7 +62,7 @@
       <h2 class="section-title">FEATURED CONTENT</h2>
       <div class="featured-grid">
         <div class="featured-item">
-          <img src="assets/images/" alt="Strange Lights">
+          <img src="assets/images/strange.jpg" alt="Strange Lights">
           <div class="featured-overlay">
             <h3>Strange Phenomena</h3>
             <p>Unexplained occurrences</p>
