--- a/home.html
+++ b/home.html
@@ -88,7 +88,7 @@
 
   <footer>
     <div class="footer-content">
-      <p>© 2025 HAWKINS DEBUG LAB | All Rights Reserved</p>
+      <p class = "hidden">© 2025 HAWKINS DEBUG LAB | All Rights Reserved</p>
       <p class="footer-warning">⚠️ CLASSIFIED INFORMATION - LEVEL 4 CLEARANCE REQUIRED ⚠️</p>
     </div>
   </footer>
