--- a/characters.html
+++ b/characters.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Hawkins Lab - Characters</title>
-  <link rel="stylesheet" href="css/style.css" />
+  <link rel="stylesheet" href="css/characters.css" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Benguiat&family=Creepster&family=ITC+Benguiat&display=swap" rel="stylesheet">
@@ -35,7 +35,7 @@
     <div class="container">
       <h2 class="section-title">MAIN CHARACTERS</h2>
       
-      <div class="character-grid">
+      <div class="character-grid"> 
         <div class="character-card">
           <div class="character-image">
             <img src="assets/images/eleven.jpg" alt="Eleven">
@@ -95,7 +95,7 @@
 
         <div class="character-card">
           <div class="character-image">
-            <img src="assets/images/lucas.jpg" alt="Lucas">
+            <img src="/assets/images/lucas.jpg" alt="guess_me">
             <div class="character-overlay">
               <span class="character-number">WARRIOR</span>
             </div>
@@ -160,5 +160,6 @@
     </div>
   </footer>
 
+  <script src="js/lll.js"></script>
 </body>
 </html>
